# ximu3_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml  torso_imu_test.rviz  ximu3.urdf  ximu3_test.rviz  ximu_line.rviz
config/: body.yaml  upright.yaml
include/ximu3_ros/: Commands.h  Connection.h  Connection.hpp  ConnectionInfo.hpp  Connection_ros.h  DataLogger.h  DataLogger.hpp  FileConverter.h  FileConverter.hpp  GetAvailablePorts.h  Helpers.hpp  Helpers_api.hpp  NetworkDiscovery.h  NetworkDiscovery.hpp  OpenAndPing.h  SerialDiscovery.h  SerialDiscovery.hpp  UdpConnection_ros.h
launch/: show_urdf.launch  show_urdf_posable.launch  upright.launch  ximu.launch  ximu_BACKUP_15356.launch  ximu_LOCAL_15356.launch  ximu_as_pelvis.launch  ximu_as_thorax.launch  ximu_feet.launch  ximu_lower.launch  ximu_lower_upright.launch  ximu_upper.launch
launch/individual_lowerbody_imus/: lower_femur_l.launch  lower_femur_r.launch  lower_pelvis.launch  lower_talus_l.launch  lower_talus_r.launch  lower_tibia_l.launch  lower_tibia_r.launch  lower_torso.launch
meshes/: housing_s.stl
scripts/: battery_charge_graph.sh  battery_voltage_graph.sh  charge.sh  temperature_graph.sh  tmux_session_test_imu_thorax.bash
src/: main.cpp  node.cpp  node_discovery.cpp
urdf/: robot_ximu3.urdf.xacro  robot_ximu3_posable.urdf.xacro  ximu3.urdf.xacro
